Fix scroll on mobile Webkit on all elements

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -2,6 +2,7 @@
 ---
 
 html {
+  height: -webkit-fill-available;
 }
 
 body {
@@ -9,7 +10,7 @@ body {
   padding: 0;
   font: 22px/1.25 -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #333;
-  min-height: -webkit-fill-available;
+  height: -webkit-fill-available;
 }
 
 .Wrapper {
